# pop3

./: .gitignore  Cargo.toml  README.md  things-to-implement.md
bevy_demo5/: Cargo.toml
bevy_demo5/backup/src/: animation_data.rs  main.rs
bevy_demo5/src/: lib.rs
docs/: RE_NOTES.md  index.md
docs/plans/: wgpu-migration.md
docs/specs/: ai_scripting.md  audio.md  buildings.md  combat_and_pathfinding.md  core_data_structures.md  game_data_files.md  index.md  level_save_network.md  movement_system.md  object_system.md  person_units.md  re_meta.md  rendering.md  sky_rendering.md  spells.md  sprites_and_animation.md  terrain.md  (+4 more)
scripts/: TESTS.md  check_camera.py  run-game-frida.sh  run-game.sh  run_all_tests.sh  test_angle_clamping.txt  test_camera.txt  test_combined_stress.txt  test_full_rotation.txt  test_quit.txt  test_screenshot.txt  test_shift_cancel.txt  test_top_view.txt  test_walkability.txt  test_wasd_quadrants.txt  test_zoom_clamp.txt
shaders/: hud_sprite.wgsl  landscape.wgsl  landscape_cpu.wgsl  landscape_full.wgsl  landscape_grad.wgsl  level_objects.wgsl  objects.wgsl  objects_tex.wgsl  overlay_text.wgsl  pathfinding_demo.wgsl  shadow.wgsl  shadow_demo_depth.wgsl  shadow_demo_depth_sprite.wgsl  shadow_demo_ground.wgsl  shadow_demo_object.wgsl  shadow_demo_sprite.wgsl  shadow_depth_building.wgsl  shadow_depth_sprite.wgsl  shaman_sprite.wgsl  sky.wgsl  sky_dome.wgsl  sprite.wgsl  text.wgsl  walkability_overlay.wgsl
src/: buildings.rs  default_model.rs  envelop.rs  game_command.rs  hud.rs  landscape.rs  lib.rs  main.rs  sprites.rs  view.rs
tmp/: TODO
(+88 files in other folders)
