[package]
name = "populous_authentic_demo"
version = "0.1.0"
edition = "2021"

[lib]
name = "populous_authentic_demo"
path = "src/lib.rs"

[[bin]]
name = "populous_authentic_demo"
path = "src/main.rs"

[[bin]]
name = "sprite_demo"
path = "src/bin/sprite_demo.rs"

[[bin]]
name = "vfra_demo"
path = "src/bin/vfra_demo.rs"

[[bin]]
name = "vele_demo"
path = "src/bin/vele_demo.rs"

[[bin]]
name = "mesh_demo"
path = "src/bin/mesh_demo.rs"

[dependencies]
bevy = { version = "0.15", features = ["bevy_remote"] }
